--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ email: andreas@spinnenhain.de
 # For every social button you want to display, set your username or userid
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
-#github_username: spinnenhain
+steam_username: neowulf
 codepen_username: exampleUser
 dev_username: exampleUser
 linkedin_username: exampleUser
