--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ username: Spinnenhain
 typing_text: Hier entsteht etwas großartiges
 # email: Your E-Mail address for the email button.
 email: andreas@spinnenhain.de
-facebook_username: spinnenhain
+facebook_username: 61571193857707
 instagram_username: spinnenhain
 telegram_username: spinnenhain
 twitter_username: spinnenhain
