--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ typing_text: Hier entsteht etwas großartiges
 # email: Your E-Mail address for the email button.
 email: andreas@spinnenhain.de
 facebook_username: 61571193857707
+linkedin_username: spinnenhain
 instagram_username: spinnenhain
 telegram_username: spinnenhain
 twitter_username: spinnenhain
@@ -26,9 +27,7 @@ website_name: spinnenhain.de
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
 steam_username: neowulf
-codepen_username: exampleUser
-dev_username: exampleUser
-linkedin_username: exampleUser
+
 
 
 # ABOUT ME SECTION
