--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ email: andreas@spinnenhain.de
 facebook_username: 61571193857707
 linkedin_username: spinnenhain
 instagram_username: spinnenhain
+whatsapp_username: 4915560883439
 telegram_username: spinnenhain
 twitter_username: spinnenhain
 website_name: spinnenhain.de
